# yt-faceless-automation

./: .env.example  .gitignore  ACTUAL_CODE_STATUS.md  ANALYTICS_WORKFLOW_FIX_GUIDE.md  BULLETPROOF_FIXES.md  BULLETPROOF_FIXES_COMPLETE.md  BULLETPROOF_V4_SOLUTION.md  CLAUDE.md  COMPREHENSIVE_WEBHOOK_DEBUG_REPORT.md  CURRENT_STATUS_REPORT.md  FINAL_VERIFICATION.md  FINAL_VERIFICATION_PROOF.md  FIXES_APPLIED.md  FIX_OAUTH_ACCESS_DENIED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PHASE8_COMPLETE.md  PHASE_8_COMPLETE.md  PHASE_8_FIXES_APPLIED.md  PHASE_8_PROOF_OF_IMPLEMENTATION.md  PROJECT_STATUS.md  README.md  SCRIPT_GENERATION_FIX.md  SOLUTION_GUIDE.md  V3_FIXES_COMPLETE.md  VERIFICATION_ALL_FIXES_APPLIED.md  VISUAL_ENHANCEMENT_GUIDE.md  WORKFLOW_ANALYSIS_COMPLETE.md  WORKFLOW_DIAGNOSIS_REPORT.md  WORKFLOW_FIXES_APPLIED.md  YOUTUBE_ANALYTICS_FIX_GUIDE.md  YOUTUBE_ANALYTICS_WORKFLOW_DEBUG_REPORT.md  YOUTUBE_OAUTH2_SETUP_GUIDE.md  YOUTUBE_UPLOAD_LIMITS.md  apply_dynamic_ideas_fix.py  auto_deploy_and_test.py  auto_import_workflows.py  check_n8n_webhooks.py  check_youtube_status.py  claude_dynamic_generator.py  (+102 more)
.claude/: settings.local.json
archive/: BULLETPROOF_FIXES_APPLIED.md  PHASE8_BULLETPROOF_FIXES.md  PHASE8_FINAL_BULLETPROOF.md  PHASE_6_7_ENHANCED_PLAN.md  V4_DEPLOYMENT_SUMMARY.md  claude_script_generator.py  claude_script_generator_v2.py  claude_script_generator_v3.py  run_full_production_pipeline.py  run_full_production_pipeline_v2.py  run_full_production_pipeline_v3.py  test_10min_script.py  test_80days_script.py  test_all_scripts.py  test_v2_fixes.py  (+10 more)
(+93 files in other folders)
